# deer-flow

deep-research-api/: .env.example  API.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  examples.py  install-mcp.sh  mcp-config.json  pyproject.toml  requirements.txt
deep-research-api/api/: config.py  main.py  models.py
deep-research-api/mcp-server/: server.py
deep-research-api/research-core/: __init__.py  workflow.py
deep-research-api/research-core/agents/: agents.py  tool_interceptor.py
deep-research-api/research-core/config/: configuration.py
deep-research-api/research-core/graph/: nodes.py
deep-research-api/research-core/prompts/: coordinator.md  researcher.zh_CN.md  template.py
deep-research-api/research-core/tools/: search.py
deep-research-api/research-core/tools/tavily_search/: tavily_search_results_with_images.py
deep-research-api/research-core/utils/: context_manager.py
deep-research-api/research_core/: __init__.py  workflow.py
deep-research-api/research_core/agents/: agents.py  tool_interceptor.py
deep-research-api/research_core/config/: configuration.py
deep-research-api/research_core/crawler/: crawler.py  jina_client.py
deep-research-api/research_core/graph/: __init__.py  builder.py  checkpoint.py  nodes.py  types.py
deep-research-api/research_core/llms/: llm.py
deep-research-api/research_core/prompts/: coordinator.zh_CN.md  planner.md  template.py
deep-research-api/research_core/rag/: builder.py  dify.py  milvus.py  moi.py  qdrant.py  ragflow.py  vikingdb_knowledge_base.py
deep-research-api/research_core/tools/: crawl.py  retriever.py  search.py
deep-research-api/research_core/tools/tavily_search/: tavily_search_api_wrapper.py  tavily_search_results_with_images.py
deep-research-api/research_core/utils/: context_manager.py
docs/: mcp_integrations.md
src/agents/: agents.py
src/config/: configuration.py
src/rag/: milvus.py  retriever.py
src/server/: app.py
src/utils/: context_manager.py
tests/unit/server/: test_app.py
web/: package.json  pnpm-lock.yaml
(+2 files in other folders)
