[project]
name = "deep-research-api"
version = "0.1.0"
description = "Multi-agent deep research framework API and MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langchain-deepseek>=0.1.0",
    "langchain-milvus>=0.2.0",
    "langchain-qdrant>=0.3.0",
    "langchain-tavily>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "mcp_server", "research_core"]

[project.scripts]
deep-research-api = "api.main:run"
deep-research-mcp = "mcp_server.server:main"
